--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "pycounts"
+name = "pycounts_rd524"
 version = "0.1.0"
 description = "Calculate word counts in a text file!"
 authors = ["Robin Dhillon"]
@@ -13,6 +13,7 @@ matplotlib = ">=3.6.2"
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
 pytest-cov = "^4.0.0"
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
